Refocus referrals on mutual Skip the Line pass rewards
